s3: libsmb: Fix cut and paste error using the wrong structure type.

BUG: https://bugzilla.samba.org/show_bug.cgi?id=12383

Signed-off-by: Jeremy Allison <jra@samba.org>
Reviewed-by: Volker Lendecke <vl@samba.org>

Autobuild-User(master): Volker Lendecke <vl@samba.org>
Autobuild-Date(master): Wed Oct 19 14:33:53 CEST 2016 on sn-devel-144

(cherry picked from commit c21a6eda370fa0b0698a5e1fd565bd2e014d326a)

Autobuild-User(v4-5-test): Karolin Seeger <kseeger@samba.org>
Autobuild-Date(v4-5-test): Thu Oct 20 14:45:29 CEST 2016 on sn-devel-144